--- a/Hopex.Model/Hopex.Model.csproj
+++ b/Hopex.Model/Hopex.Model.csproj
@@ -11,7 +11,7 @@
   <ItemGroup>
     <AssemblyVersionFiles Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <Target Name="AssemblyVersionMAIN" Inputs="@(AssemblyVersionFiles)" Outputs="UpdatedAssemblyVersionFiles">
+  <Target Name="AssemblyVersionMAIN" Inputs="@(AssemblyVersionFiles)" Outputs="UpdatedAssemblyVersionFiles" Condition="'$(BuildingForLiveUnitTesting)' != 'true'">
     <Attrib Files="%(AssemblyVersionFiles.FullPath)" Normal="" />
     <AssemblyInfo CodeLanguage="CS" AssemblyDescription="Hopex.ApplicationServer.WebServices" AssemblyCompany="$(CompanyName)" AssemblyProduct="HOPEX" ComVisible="false" CLSCompliant="true" OutputFile="%(AssemblyVersionFiles.FullPath)" AssemblyTitle="$(ProductName)" AssemblyCopyright="Copyright $(CompanyName), All rights reserved." AssemblyVersion="$(FileVersion)" AssemblyFileVersion="$(FileVersion)" AssemblyInformationalVersion="$(FileVersion)">
       <Output TaskParameter="OutputFile" ItemName="UpdatedAssemblyVersionFiles" />
@@ -48,6 +48,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GraphQL, Version=2.4.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\GraphQL.2.4.0\lib\net45\GraphQL.dll</HintPath>
+    </Reference>
+    <Reference Include="GraphQL-Parser, Version=4.1.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\GraphQL-Parser.4.1.1\lib\netstandard2.0\GraphQL-Parser.dll</HintPath>
+    </Reference>
+    <Reference Include="Hopex.ApplicationServer.WebServices">
+      <HintPath>..\..\..\ExeRelease\Assemblies\Hopex.ApplicationServer.WebServices.dll</HintPath>
+    </Reference>
     <Reference Include="Mega.Macro.Wrapper, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\ExeRelease\Assemblies\Mega.Macro.Wrapper.dll</HintPath>
@@ -56,14 +65,38 @@
       <HintPath>..\..\..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\System.Buffers.4.5.0\lib\netstandard2.0\System.Buffers.dll</HintPath>
+    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Reactive, Version=4.2.0.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\System.Reactive.4.2.0\lib\net46\System.Reactive.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.Core, Version=3.0.3000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\System.Reactive.Core.4.2.0\lib\net46\System.Reactive.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reactive.Linq, Version=3.0.3000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\System.Reactive.Linq.4.2.0\lib\net46\System.Reactive.Linq.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.5.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\System.Runtime.CompilerServices.Unsafe.4.6.0\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\System.Threading.Tasks.Extensions.4.5.3\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Windows" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstractions\DataModel\CollectionSetter.cs" />
@@ -80,10 +113,12 @@
     <Compile Include="Abstractions\MetaModel\IEnumDescription.cs" />
     <Compile Include="Abstractions\MetaModel\IHopexMetaModel.cs" />
     <Compile Include="Abstractions\MetaModel\IHopexMetaModelManager.cs" />
+    <Compile Include="Abstractions\MetaModel\IPathConditionDescription.cs" />
     <Compile Include="Abstractions\MetaModel\IPathDescription.cs" />
     <Compile Include="Abstractions\MetaModel\IPropertyDescription.cs" />
     <Compile Include="Abstractions\MetaModel\IRelationshipDescription.cs" />
     <Compile Include="Abstractions\MetaModel\PropertyType.cs" />
+    <Compile Include="DataModel\CrudComputer.cs" />
     <Compile Include="DataModel\HopexDataModel.cs" />
     <Compile Include="DataModel\HopexModelCollection.cs" />
     <Compile Include="DataModel\HopexModelElement.cs" />
@@ -91,13 +126,16 @@
     <Compile Include="MetaModel\EnumDescription.cs" />
     <Compile Include="MetaModel\HopexMetaModelManager.cs" />
     <Compile Include="MetaModel\MetaModel.cs" />
+    <Compile Include="MetaModel\PathConditionDescription.cs" />
     <Compile Include="MetaModel\PathDescription.cs" />
     <Compile Include="MetaModel\PropertyDescription.cs" />
     <Compile Include="MetaModel\RelationshipDescription.cs" />
     <Compile Include="Mocks\DataGenerator.cs" />
+    <Compile Include="Mocks\IMegaDrawing.cs" />
     <Compile Include="Mocks\MockDataElement.cs" />
     <Compile Include="Mocks\MockDataModel.cs" />
     <Compile Include="Mocks\MockModelCollection.cs" />
+    <Compile Include="Mocks\IMegaRoot.cs" />
     <Compile Include="PivotSchema\Convertors\PivotSchemaValidationException.cs" />
     <Compile Include="PivotSchema\Convertors\SchemaPivotConvertor.cs" />
     <Compile Include="PivotSchema\Convertors\ValidationContext.cs" />
@@ -105,8 +143,10 @@
     <Compile Include="PivotSchema\Loaders\FileSystemLoader.cs" />
     <Compile Include="PivotSchema\Loaders\RessourcesLoader.cs" />
     <Compile Include="PivotSchema\Models\ClassDescription.cs" />
+    <Compile Include="PivotSchema\Models\ClassConstraintsDescription.cs" />
     <Compile Include="PivotSchema\Models\ConstraintsDescription.cs" />
     <Compile Include="PivotSchema\Models\EnumDescription.cs" />
+    <Compile Include="PivotSchema\Models\PathConditionDescription.cs" />
     <Compile Include="PivotSchema\Models\PathDescription.cs" />
     <Compile Include="PivotSchema\Models\PivotSchema.cs" />
     <Compile Include="PivotSchema\Models\PropertyDescription.cs" />
