--- a/Mega.WebService.GraphQL/Web.config
+++ b/Mega.WebService.GraphQL/Web.config
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="secureAppSettings" type="System.Configuration.NameValueSectionHandler" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
-  <appSettings>
+  <appSettings file="Web.Local.Config">
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
@@ -39,17 +39,19 @@
     <!--      AllowAnonymousConnection: 0 Or 1 : 1 allows anonymous connection (without web user)-->
     <add key="LogRequest" value="0" />
     <!--      LogRequest: 0 Or 1 : 1 allows you to log all the requests made to MWAS-->
-    <add key="GraphQLSchemas" value="ITPM, GDPR, Audit, BPA, Data, MetaModel" />
+    <add key="EnableTestingWebService" value="TRUE" />
+    <!--      EnableTestingWebService-->
+    <add key="GraphQLSchemas" value="ITPM, Assessment, Audit, BPA, Data, GDPR, Incident, MetaModel" />
     <!--      GraphQLSchema-->
-    <add key="EnvironmentId" value="InK9DL2nTrTS" />
+    <add key="EnvironmentId" value="" />
     <!--      EnvironmentId-->
-    <add key="RepositoryId" value="YiG5e7rmTvv2" />
+    <add key="RepositoryId" value="" />
     <!--      RepositoryId-->
-    <add key="ProfileId" value="I9iCqGJg)u00" />
+    <add key="ProfileId" value="" />
     <!--      ProfileId-->
-    <add key="Login" value="scr" />
+    <add key="Login" value="" />
     <!--      Login-->
-    <add key="Password" value="Hopex" />
+    <add key="Password" value="" />
     <!--      Password-->
   </appSettings>
   <secureAppSettings>
@@ -78,6 +80,11 @@
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="31457280" />
+      </requestFiltering>
+    </security>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
@@ -88,7 +95,7 @@
     <httpProtocol>
       <customHeaders>
         <remove name="Access-Control-Allow-Origin" />
-        <add name="Access-Control-Allow-Origin" value="http://localhost:61948" />
+        <add name="Access-Control-Allow-Origin" value="*" />
         <remove name="Access-Control-Allow-Headers" />
         <add name="Access-Control-Allow-Headers" value="Content-Type, Authorization, x-hopex-context, x-hopex-sessiontoken, x-hopex-task, x-hopex-wait" />
         <remove name="Access-Control-Allow-Credentials" />
