--- a/Hopex.WebService.Tests/Hopex.WebService.Tests.csproj
+++ b/Hopex.WebService.Tests/Hopex.WebService.Tests.csproj
@@ -42,6 +42,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Castle.Core.4.4.0\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="FluentAssertions, Version=5.9.0.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\FluentAssertions.5.9.0\lib\net45\FluentAssertions.dll</HintPath>
+    </Reference>
+    <Reference Include="FluentAssertions.Json, Version=5.3.0.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\FluentAssertions.Json.5.3.0\lib\net451\FluentAssertions.Json.dll</HintPath>
+    </Reference>
     <Reference Include="GraphQL, Version=2.4.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\GraphQL.2.4.0\lib\net45\GraphQL.dll</HintPath>
     </Reference>
@@ -51,12 +60,19 @@
     <Reference Include="Hopex.ApplicationServer.WebServices">
       <HintPath>..\..\..\ExeRelease\Assemblies\Hopex.ApplicationServer.WebServices.dll</HintPath>
     </Reference>
+    <Reference Include="Mega.Macro.Wrapper, Version=7.87.5379.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\exeRelease\Assemblies\Mega.Macro.Wrapper.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\MSTest.TestFramework.2.0.0\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\MSTest.TestFramework.2.0.0\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="Moq, Version=4.13.0.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Moq.4.13.1\lib\net45\Moq.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -65,6 +81,7 @@
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\System.Buffers.4.5.0\lib\netstandard2.0\System.Buffers.dll</HintPath>
     </Reference>
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Reactive, Version=4.2.0.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\System.Reactive.4.2.0\lib\net46\System.Reactive.dll</HintPath>
@@ -89,6 +106,8 @@
     </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="WindowsBase" />
     <Reference Include="xunit.abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\xunit.abstractions.2.0.3\lib\net35\xunit.abstractions.dll</HintPath>
@@ -104,16 +123,50 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Hopex.WebService.Tests.cs" />
-    <Compile Include="Mocks\HopexRequest.cs" />
+    <Compile Include="Assertions\HopexResponseAssertions.cs" />
+    <Compile Include="Assertions\MegaIdMatchers.cs" />
+    <Compile Include="AttachmentEntryPoint_should.cs" />
+    <Compile Include="DiagramEntryPoint_should.cs" />
+    <Compile Include="EntryPoint_should.cs" />
+    <Compile Include="Mocks\Drawings\MockMegaDrawing.cs" />
+    <Compile Include="Mocks\Drawings\MockMegaDrawingFactory.cs" />
+    <Compile Include="Mocks\MegaIdComparer.cs" />
+    <Compile Include="Mocks\MockCollectionDescription.cs" />
+    <Compile Include="Mocks\MockCurrentEnvironment.cs" />
+    <Compile Include="Mocks\MockMegaCollection.cs" />
+    <Compile Include="Mocks\MockMegaItem.cs" />
+    <Compile Include="Mocks\MockMegaObject.cs" />
+    <Compile Include="Mocks\MockMegaSite.cs" />
+    <Compile Include="Mocks\MockMegaWizardContext.cs" />
+    <Compile Include="Mocks\MockMegaWrapperObject.cs" />
+    <Compile Include="Mocks\MockMegaRoot.cs" />
+    <Compile Include="Mocks\MockRequest.cs" />
     <Compile Include="Mocks\Logger.cs" />
     <Compile Include="Mocks\MockEntryPoint.cs" />
+    <Compile Include="Mocks\MockToolkit.cs" />
+    <Compile Include="Mocks\MockToolkit_should.cs" />
+    <Compile Include="Mocks\MockMegaVersionInformation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SchemaEntryPoint_should.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
+    <None Include="CONFIG\compatibility_list.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="CONFIG\V3\Standard\ITPM.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
+    <None Include="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Hopex.Common\Hopex.Common.csproj">
+      <Project>{43369561-0052-477a-b23f-61fc57b8466f}</Project>
+      <Name>Hopex.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Hopex.Model\Hopex.Model.csproj">
       <Project>{20580587-1c19-45b9-9ae6-806751b4371e}</Project>
       <Name>Hopex.Model</Name>
