--- a/Hopex.WebService.Tests/packages.config
+++ b/Hopex.WebService.Tests/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.4.0" targetFramework="net461" />
+  <package id="FluentAssertions" version="5.9.0" targetFramework="net461" />
+  <package id="FluentAssertions.Json" version="5.3.0" targetFramework="net461" />
   <package id="GraphQL" version="2.4.0" targetFramework="net472" />
   <package id="GraphQL-Parser" version="4.1.1" targetFramework="net472" />
+  <package id="Moq" version="4.13.1" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="2.0.0" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
