--- a/Mega.WebService.GraphQL.Tests/Web.config
+++ b/Mega.WebService.GraphQL.Tests/Web.config
@@ -1,24 +1,20 @@
-﻿<?xml version="1.0"?>
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  https://go.microsoft.com/fwlink/?LinkId=301880
-  -->
+<?xml version="1.0"?>
 <configuration>
-  <appSettings>
+  <appSettings file="Web.Local.Config">
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="HopexGraphQL" value="http://localhost/HOPEXGraphQL" />
+    <add key="AuthenticationUrl" value="http://localhost/UAS" />
+    <add key="MegaSiteProvider" value="http://localhost/MEGASSP" />
+    <add key="EnvironmentId" value="" />
+    <add key="RepositoryId" value="" />
+    <add key="ProfileId" value="" />
+    <add key="Login" value="" />
+    <add key="Password" value="" />
   </appSettings>
-  <!--
-    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
-
-    The following attributes can be set on the <httpRuntime> tag.
-      <system.Web>
-        <httpRuntime targetFramework="4.6.1" />
-      </system.Web>
-  -->
-  <system.web>
+    <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
