--- a/Hopex.WebService/Hopex.WebService.csproj
+++ b/Hopex.WebService/Hopex.WebService.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
   <Target Name="AssemblyVersionMAIN" Inputs="@(AssemblyVersionFiles)" Outputs="UpdatedAssemblyVersionFiles" Condition="'$(BuildingForLiveUnitTesting)' != 'true'">
     <Attrib Files="%(AssemblyVersionFiles.FullPath)" Normal="" />
-    <AssemblyInfo CodeLanguage="CS" AssemblyDescription="Hopex.Macro.GraphQL" AssemblyCompany="$(CompanyName)" AssemblyProduct="HOPEX" ComVisible="false" CLSCompliant="true" OutputFile="%(AssemblyVersionFiles.FullPath)" AssemblyTitle="$(ProductName)" AssemblyCopyright="Copyright $(CompanyName), All rights reserved." AssemblyVersion="$(FileVersion)" AssemblyFileVersion="$(FileVersion)" AssemblyInformationalVersion="$(FileVersion)">
+    <AssemblyInfo CodeLanguage="CS" AssemblyDescription="Hopex.Macro.GraphQL" AssemblyCompany="$(CompanyName)" AssemblyProduct="HOPEX" ComVisible="false" CLSCompliant="false" OutputFile="%(AssemblyVersionFiles.FullPath)" AssemblyTitle="$(ProductName)" AssemblyCopyright="Copyright $(CompanyName), All rights reserved." AssemblyVersion="$(FileVersion)" AssemblyFileVersion="$(FileVersion)" AssemblyInformationalVersion="$(FileVersion)" InternalsVisibleTo="Hopex.WebService.Tests">
       <Output TaskParameter="OutputFile" ItemName="UpdatedAssemblyVersionFiles" />
     </AssemblyInfo>
   </Target>
@@ -63,7 +63,7 @@
       <HintPath>..\..\..\ExeRelease\Assemblies\Mega.Macro.Wrapper.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -83,8 +83,8 @@
     <Reference Include="System.Reactive.Linq, Version=3.0.3000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\System.Reactive.Linq.4.2.0\lib\net46\System.Reactive.Linq.dll</HintPath>
     </Reference>
-    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.5.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\System.Runtime.CompilerServices.Unsafe.4.6.0\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.6.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\System.Runtime.CompilerServices.Unsafe.4.7.0\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\System.Threading.Tasks.Extensions.4.5.3\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
@@ -110,12 +110,15 @@
     <Compile Include="EntryPoint.cs" />
     <Compile Include="EntryPointOData.cs" />
     <Compile Include="IFileSource.cs" />
-    <Compile Include="InputArguments.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="SchemaPathExtractor.cs" />
     <Compile Include="Schema\CompatibilityList.cs" />
     <Compile Include="SchemaEntryPoint.cs" />
-    <Compile Include="Schema\Directives\FormatDirective.cs" />
     <Compile Include="Schema\Filters\BooleanFilterValue.cs" />
     <Compile Include="Schema\Filters\DateTimeFilterValue.cs" />
     <Compile Include="Schema\Filters\DoubleFilterValue.cs" />
@@ -125,7 +128,14 @@
     <Compile Include="Schema\Filters\LongFilterValue.cs" />
     <Compile Include="Schema\Filters\IdFilterValue.cs" />
     <Compile Include="Schema\Filters\StringFilterValue.cs" />
+    <Compile Include="Schema\SchemaManagerProvider.cs" />
+    <Compile Include="Schema\Types\FormatsEnumerationGraphType.cs" />
+    <Compile Include="Schema\Formats\NameSpaceFormat.cs" />
+    <Compile Include="Schema\Types\GenericObjectGraphType.cs" />
     <Compile Include="Schema\HopexEnumerationGraphType.cs" />
+    <Compile Include="Schema\ILanguagesProvider.cs" />
+    <Compile Include="Schema\LanguagesEnumerationGraphType.cs" />
+    <Compile Include="Schema\MutationListTypeFactory.cs" />
     <Compile Include="Schema\QueryFilter\ArrayRequiredException.cs" />
     <Compile Include="Schema\QueryFilter\FilterArgumentBuilder.cs" />
     <Compile Include="Schema\QueryFilter\FilterCompiler.cs" />
@@ -133,44 +143,64 @@
     <Compile Include="Schema\SchemaBuilder.cs" />
     <Compile Include="Schema\SchemaManager.cs" />
     <Compile Include="Schema\Formats\StringFormat.cs" />
-    <Compile Include="Schema\Formats\StringFormatEnum.cs" />
     <Compile Include="Schema\ISchemaManagerProvider.cs" />
     <Compile Include="Schema\TypeExtensions.cs" />
+    <Compile Include="Schema\Types\DiagnosticType.cs" />
     <Compile Include="Schema\Types\ContextType.cs" />
+    <Compile Include="Schema\Types\InputCustomPropertyType.cs" />
+    <Compile Include="Schema\Types\InputCustomRelationshipType.cs" />
+    <Compile Include="Schema\Types\MetaModelVersion.cs" />
+    <Compile Include="Schema\Types\SchemaGraphType.cs" />
+    <Compile Include="Schema\Types\SchemaType.cs" />
     <Compile Include="UserContext.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="CONFIG\compatibility_list.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="CONFIG\V3\Standard\Assessment.JSON">
+    <EmbeddedResource Include="CONFIG\V3\Standard\Assessment.JSON">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="CONFIG\V3\Standard\Audit.json">
+    </EmbeddedResource>
+    <EmbeddedResource Include="CONFIG\V3\Standard\Audit.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="CONFIG\V3\Standard\BPA.json">
+    </EmbeddedResource>
+    <EmbeddedResource Include="CONFIG\V3\Standard\BPA.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="CONFIG\V3\Standard\Data.json">
+    </EmbeddedResource>
+    <EmbeddedResource Include="CONFIG\V3\Standard\Data.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="CONFIG\V3\Standard\GDPR.json">
+    </EmbeddedResource>
+    <EmbeddedResource Include="CONFIG\V3\Standard\ITPM.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="CONFIG\V3\Standard\Incident.json">
+    </EmbeddedResource>
+    <EmbeddedResource Include="CONFIG\V3\Standard\MetaModel.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="CONFIG\V3\Standard\ITPM.json">
+    </EmbeddedResource>
+    <EmbeddedResource Include="CONFIG\V3\Standard\DataPrivacy.JSON">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="CONFIG\V3\Standard\MetaModel.json">
+    </EmbeddedResource>
+    <EmbeddedResource Include="CONFIG\V3\Standard\Reporting.JSON">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="hopexmanifest.json" />
+    </EmbeddedResource>
+    <EmbeddedResource Include="CONFIG\V3\Standard\Risk.JSON">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CONFIG\V3\Standard\Workflow.JSON">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <None Include="has-manifest.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="CONFIG\V3\Custom\readme.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <Content Include="Macro GraphQL.mgr" />
   </ItemGroup>
   <ItemGroup>
@@ -183,11 +213,7 @@
       <Name>Hopex.Model</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="CONFIG\V3\Custom\" />
-    <Folder Include="CONFIG\V4\Custom\" />
-    <Folder Include="CONFIG\V4\Standard\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
