--- a/Mega.WebService.GraphQL/Web.config
+++ b/Mega.WebService.GraphQL/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="secureAppSettings" type="System.Configuration.NameValueSectionHandler" />
@@ -41,7 +41,7 @@
     <!--      LogRequest: 0 Or 1 : 1 allows you to log all the requests made to MWAS-->
     <add key="EnableTestingWebService" value="TRUE" />
     <!--      EnableTestingWebService-->
-    <add key="GraphQLSchemas" value="ITPM, Assessment, Audit, BPA, Data, GDPR, Incident, MetaModel" />
+    <add key="GraphQLSchemas" value="ITPM, Assessment, Audit, BPA, Data, DataPrivacy, MetaModel, Reporting, Risk, Workflow" />
     <!--      GraphQLSchema-->
     <add key="EnvironmentId" value="" />
     <!--      EnvironmentId-->
